# bpg

./: .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  example.bpg.yaml  next-steps.md  plan.out  process.bpg.yaml  pyproject.toml  todo.md
.bpg/viz/: process.bpg.html
docs/: bpg-spec.md  overview.md  quickstart.md
docs/ai/: how_agents_should_use_bpg.md  prompt_patterns.md  repair_strategies.md
docs/assets/: ingest.bpg.html  search-ingest-pipeline.dot
docs/cli/: apply-patch.md  apply.md  cleanup.md  doctor.md  down.md  fmt.md  init.md  logs.md  (+11 more)
manual/: USER_MANUAL.md
sample/: .env  .env.example  README.md  docker-compose.yml  package-metadata.json
scripts/: build_docs.sh
tests/: E2E_DESIGN.md  test_cli_apply_patch.py  test_cli_doctor.py  test_cli_fmt.py  test_cli_init_intent.py  test_cli_package.py  test_cli_plan.py  test_cli_plan_explain.py  test_cli_provider_describe.py  test_cli_provider_registry.py  test_cli_replay.py  test_cli_runtime_orchestration.py  test_cli_spec_test.py  test_cli_visualize.py  test_compiler.py  test_core_provider.py  test_dashboard_server.py  test_engine.py  test_engine_backends.py  test_events.py  test_expr_lint.py  test_langgraph_runtime.py  test_modules.py  test_normalize.py  test_observability.py  test_packaging_inference.py  test_packaging_render.py  test_packaging_spec.py  test_packaging_writer.py  test_patching.py  test_planner.py  test_policy.py  test_provider_loader.py  test_providers.py  test_runtime_inference.py  test_runtime_spec.py  test_slack_interactive.py  test_store.py  test_visualizer.py
(+140 files in other folders)
