[project]
name = "bpg"
version = "0.1.0"
description = "Business Process Graph — declarative, infrastructure-as-code system for business workflows"
readme = "README.md"
authors = [
    { name = "ginstrom", email = "r-ginstrom@mercari.com" }
]
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.9",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "rich>=14.3.3",
    "typer>=0.24.1",
]

[project.urls]
Homepage = "https://github.com/<org>/<repo>"
Repository = "https://github.com/<org>/<repo>"

[project.scripts]
bpg = "bpg.cli:main"

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest-cov>=7.0.0",
]

[tool.pytest.ini_options]
markers = [
    "system_integration: tests that call real external production systems",
]
